# pincer-games

./: .gitignore  .gitmodules  README.md  tictac.py
arduino/: pincer_arduino.ino  pseudonode.hpp
examples/: ixx.step  oxx.step
examples/checkers/cpp/: build.sh  checkers  checkers.cpp  checkers.hpp  main.cpp  program
launch/: launch.xml
src/arduino_comm/: CMakeLists.txt  package.xml
src/arduino_comm/include/arduino_comm/: arduinocomm.hpp
src/arduino_comm/src/: arduinocomm.cpp  arduinocomm_node.cpp
src/checkers/: CMakeLists.txt  package.xml
src/checkers/include/checkers/: checkers.hpp  checkers_NEW.hpp
src/checkers/src/: checkers.cpp  checkers_node.cpp
src/chess/: CMakeLists.txt  package.xml
src/darknet_emulator/: CMakeLists.txt  package.xml
src/darknet_emulator/action/: CheckForObjects.action
src/darknet_emulator/include/: YoloObjectDetector.hpp
src/darknet_emulator/include/darknet_emulator/: YoloEmulator.hpp  YoloObjectDetector.hpp
src/darknet_emulator/src/: YoloEmulator.cpp  YoloObjectDetector.cpp  yolo_object_detector_node.cpp
src/darknet_emulator_msgs/: CMakeLists.txt  package.xml
src/darknet_emulator_msgs/action/: CheckForObjects.action
src/test_game/: CMakeLists.txt  package.xml
src/test_game/include/test_game/: testgame.hpp
src/test_game/src/: testgame.cpp  testgame_node.cpp
src/tictactoe/: CMakeLists.txt  package.xml
src/tictactoe/include/: pincergames.hpp
src/tictactoe/include/tictactoe/: tictac.hpp
src/tictactoe/src/: pincergames.cpp  pincergames.hpp  tictac.cpp  tictac_node.cpp
